cargo_check_phase3.txt
    Checking machine v0.1.0 (/home/feroan/Projects/theMachine/machine)
error[E0583]: file not found for module `ports`
 --> src/core/network.rs:1:1
  |
1 | pub mod ports;
  | ^^^^^^^^^^^^^^
  |
  = help: to create the module `ports`, create file "src/core/network/ports.rs" or "src/core/network/ports/mod.rs"
  = note: if there is a `mod ports` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `latency`
 --> src/core/network.rs:2:1
  |
2 | pub mod latency;
  | ^^^^^^^^^^^^^^^^
  |
  = help: to create the module `latency`, create file "src/core/network/latency.rs" or "src/core/network/latency/mod.rs"
  = note: if there is a `mod latency` elsewhere in the crate already, import it with `use crate::...` instead

error[E0428]: the name `snapshot` is defined multiple times
  --> src/commands/mod.rs:27:1
   |
16 | pub mod snapshot;
   | ----------------- previous definition of the module `snapshot` here
...
27 | pub mod snapshot;
   | ^^^^^^^^^^^^^^^^^ `snapshot` redefined here
   |
   = note: `snapshot` must be defined only once in the type namespace of this module

error[E0599]: no method named `bold` found for unit type `()` in the current scope
 --> src/commands/ports.rs:7:68
  |
7 | ...ess").bold();
  |          ^^^^ method not found in `()`

Some errors have detailed explanations: E0428, E0583, E0599.
For more information about an error, try `rustc --explain E0428`.
error: could not compile `machine` (lib) due to 4 previous errors
